# trapo

./: .gitignore  EXCEPTIONS.md  INGEST.md  LICENSE  README.md  docker-compose.otel.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: infinity-parser2-engine.md  linting.md  lmstudio-engine.md  migrations.md  otel.md  page-markdown-pipeline.md  schema.md  skylos.md  storybook.md
tests/: test_annotation_report.py  test_assets.py  test_chunking.py  test_cli.py  test_diagnostics_api.py  test_docling_reader.py  test_document_terms.py  test_filesystem_safety.py  test_hashing.py  test_infinity_engine.py  test_ingest_storage.py  test_lmstudio_context.py  test_lmstudio_diagnostics.py  test_lmstudio_orientation.py  test_lmstudio_reader.py  test_lmstudio_regions.py  test_lmstudio_smoke.py  test_markdown_reader.py  test_migrations.py  test_mineru_reader.py  test_mineru_regions.py  test_normalized_pipelines.py  test_observability.py  test_page_images.py  test_page_markdown_step.py  test_page_orientation_heuristics.py  test_preview_cache.py  test_quack_db.py  test_region_fusion.py  test_runtime_config.py  test_search_api.py  test_server_api.py  test_skylos_check.py  test_token_estimator.py
trapo/: __init__.py  annotation_engines.py  annotation_report.py  annotation_settings.py  assets.py  bootstrap.py  cli.py  config.py  db.py  diagnostics.py  diagnostics_values.py  document_markdown.py  document_markdown_fallback.py  document_markdown_helpers.py  document_markdown_mappings.py  document_markdown_models.py  document_markdown_status.py  document_markdown_storage.py  document_regions.py  filesystem_safety.py  hash.py  ids.py  lmstudio_pages.py  lmstudio_regions.py  logging_filters.py  mineru_bbox.py  mineru_regions.py  observability.py  page_orientation.py  page_orientation_heuristics.py  preview_cache.py  preview_cache_records.py  region_fusion.py  region_fusion_algorithm.py  region_fusion_geometry.py  region_fusion_metrics.py  region_fusion_models.py  region_fusion_profiles.py  search.py  search_annotations.py  (+9 more)
trapo/annotation/: __init__.py
trapo/annotation/docling/: __init__.py  regions.py
trapo/annotation/fusion/: __init__.py  algorithm.py  geometry.py  metrics.py  models.py  profiles.py  regions.py
trapo/annotation/infinity/: __init__.py  bbox.py  regions.py
trapo/annotation/lmstudio/: __init__.py  regions.py
trapo/annotation/mineru/: __init__.py  regions.py
trapo/ingest/: __init__.py  chunking.py  docling_reader.py  engine_steps.py  infinity_lmstudio.py  infinity_models.py  infinity_reader.py  infinity_retry.py  infinity_uvx.py  llm_diagnostic_payloads.py  llm_diagnostics.py  lmstudio_chat.py  lmstudio_client.py  lmstudio_context.py  lmstudio_evidence.py  lmstudio_lifecycle.py  lmstudio_models.py  lmstudio_native_models.py  lmstudio_orientation.py  lmstudio_profiles.py  lmstudio_prompts.py  lmstudio_reader.py  lmstudio_retry.py  lmstudio_smoke.py  lmstudio_supported_models.py  lmstudio_unload.py  lmstudio_urls.py  markdown_engines.py  markdown_reader.py  markitdown_inputs.py  markitdown_markdown.py  mineru_reader.py  model_leases.py  normalized_outputs.py  normalized_pages.py  normalized_pipelines.py  ocr_storage.py  options.py  orientation_steps.py  page_images.py  (+9 more)
trapo/migrations/: __init__.py  runner.py  versions.py
trapo/server/: __init__.py  app.py  diagnostic_analytics.py  diagnostic_analytics_models.py  diagnostic_analytics_rows.py  diagnostic_models.py  diagnostic_progress.py  diagnostic_records.py  diagnostics.py  models.py  openapi.py  preview_images.py  provenance.py  runtime.py
web/: biome.jsonc  index.html  orval.config.ts  package.json  vite.config.ts
web/.storybook/: main.ts  preview.ts
web/openapi/: trapo.openapi.json
web/src/: App.tsx  AppShell.tsx  CommandCenter.tsx  main.tsx  routeSearch.ts  routeTree.gen.ts  styles.css
web/src/components/: workbench.tsx
web/src/diagnostics/: DiagnosticsAnalyticsView.module.css  DiagnosticsAnalyticsView.tsx  DiagnosticsDetailsPane.module.css  DiagnosticsDetailsPane.tsx  DiagnosticsModelsView.module.css  DiagnosticsModelsView.tsx  DiagnosticsPage.tsx  DiagnosticsProgressView.module.css  (+17 more)
(+127 files in other folders)
